--- a/index.html
+++ b/index.html
@@ -104,14 +104,20 @@
         <!-- VISUALBLOCK 영역 시작 -->
         <div class="visualBlock">
             <div class="newBrand">
-                
+                <div class="lookbookHover">
+                    <img src="images/arcteryxLogo.png" alt="arcteryx" class="arcteryxLogo">
+                </div>
+                <p class="lookbookNotHover">NEW BRAND</p>
             </div>
             <div class="discountInfo">
-
+                <h3 class="lookbookHover">============</h3>
+                <p class="lookbookNotHover">SALE</p>
+                <p class="lookbookHover">============</p>
             </div>
             <div class="newLookbook">
-                <h3>Uniform Bridge</h3>
-                <p>24SS COLLECTIONS</p>
+                <h3 class="lookbookHover">Uniform Bridge</h3>
+                <p class="lookbookNotHover">LOOKBOOK</p>
+                <p class="lookbookHover">24SS COLLECTIONS</p>
             </div>   
         </div>
         <!-- VISUALBLOCK 영역 종료 -->
