--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><a href="#">Likes</a></li>
             <li><a href="#">Cart</a></li>
             <li><a href="#">Log In</a></li>
-            <li><a href="#">Sign Up</a></li>
+            <li><a href="/join.html">Sign Up</a></li>
         </ul>
         <!-- 개인정보, 찜 목록, 카트, 로그인 종료 -->
         <div id="deco1">
@@ -145,7 +145,7 @@
                 <a href="#" class="more" title="공지사항 더보기">MORE</a>
             </section>
             <div class="csInfo1">
-                <h2>1544-XXXX</h2>
+                <h2>1544-****</h2>
                 <p>오전9시~오후6시 운영</p>
                 <p>토,일,휴일 휴무</p> 
             </div>
@@ -159,6 +159,7 @@
         </div>
         <!-- NOTICE 영역 종료 --> 
     </div>
+    <!-- MIDDLE PART 종료 -->
     <!-- FOOTER 시작 -->
     <footer id="footer">
         <div class="footerInner">
@@ -170,10 +171,10 @@
                     <li><a href="#">개인정보처리방침</a></li>
                 </ul>
             </section>
-            <p class="copyright">Copyright since &copy; 2024 by Web "" CORPORATION ALL RIGHTS RESERVED.</p>
+            <p class="copyright">Copyright since &copy; 2024 by ARTISANTE ALL RIGHTS RESERVED.</p>
             <address>
                 <span>서울 서초구 서초대로77길 41 대동2빌딩 9층</span>
-                <span>· 전화 : 02-XXX-XXXX / · E-MAIL : master@"".com</span>
+                <span>· 전화 : 02-****-**** / · E-MAIL : master@"".com</span>
             </address>
         </div>
     </footer>
