--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><a href="#">Likes</a></li>
             <li><a href="#">Cart</a></li>
             <li><a href="#">Log In</a></li>
-            <li><a href="/join.html">Sign Up</a></li>
+            <li><a href="join.html">Sign Up</a></li>
         </ul>
         <!-- 개인정보, 찜 목록, 카트, 로그인 종료 -->
         <div id="deco1">
