--- a/join.html
+++ b/join.html
@@ -79,23 +79,23 @@
                         </label>
                         <input type="email", id="email" name="email" size="35" required placeholder="입력 예) artisante@artisante.com">
                     </p>
-                    <p class="agreementMarketing">
-                        <em>마케팅 정보 수신동의 (선택)</em>
+                    <p class="agreeMarketing">
+                        <em>마케팅 정보 수신동의 (선택)
+                            <span>······</span>
+                        </em>
                         <div class="agreeOrNot">
                             <input type="radio" id="agree" name="agree" value="Yes" Checked>
                             <label for="agree">동의함</label>
                             <input type="radio" id="disagree" name="disagree" value="No">
                             <label for="disagree">동의안함</label>
                         </div>
-                        <span>마케팅 정보 수신에 동의하시면 다양한 혜택을 받으실 수 있습니다.</span>
+                        <span id="span1">* 마케팅 정보 수신에 동의하시면 다양한 혜택을 받으실 수 있습니다.</span>
                     </p>
                     <div class="btnJoinArea">
                         <button type="submit" class="btnOk">가입</button>
                         <button type="reset" class="btnCancel">취소</button>
                     </div>
                 </fieldset>
-
-
             </form>
         </section>
     </div>
