--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- LOGO 시작 -->
         <h1 class="logo">
             <a href="index.html">
-                <img src="images/logo_trial-removebg-preview.png" alt="logo">
+                <img src="../MakingPageMyself/css/images/logo_trial-removebg-preview.png" alt="logo">
             </a>
         </h1>
         <!-- LOGO 종료 -->
@@ -105,18 +105,19 @@
         <div class="visualBlock">
             <div class="newBrand">
                 <div class="lookbookHover">
-                    <img src="images/arcteryxLogo.png" alt="arcteryx" class="arcteryxLogo">
+                    <img src="../MakingPageMyself/css/images/arcteryxLogo.png" alt="arcteryx" class="arcteryxLogo">
                 </div>
-                <p class="lookbookNotHover">NEW BRAND</p>
+                <p class="lookbookNotHover">___NEW BRAND___</p>
             </div>
             <div class="discountInfo">
-                <h3 class="lookbookHover">============</h3>
-                <p class="lookbookNotHover">SALE</p>
-                <p class="lookbookHover">============</p>
+                <div class="lookbookHover">
+                    <img src="../MakingPageMyself/css/images/wildBrickLogo.png" alt="">
+                </div>
+                <p class="lookbookNotHover">___SALE & CLEARANCE___</p>
             </div>
             <div class="newLookbook">
                 <h3 class="lookbookHover">Uniform Bridge</h3>
-                <p class="lookbookNotHover">LOOKBOOK</p>
+                <p class="lookbookNotHover">___LOOKBOOK___</p>
                 <p class="lookbookHover">24SS COLLECTIONS</p>
             </div>   
         </div>
@@ -146,14 +147,14 @@
             </section>
             <div class="csInfo1">
                 <h2>1544-****</h2>
-                <p>오전9시~오후6시 운영</p>
-                <p>토,일,휴일 휴무</p> 
+                <p><strong>AM 9시 ~ PM 6시</strong> 운영</p>
+                <p><strong>토, 일, 공휴일</strong> 휴무</p> 
             </div>
             <div class="csInfo2">
                 <ul>
-                    <li>전화 전 자주 묻는 질문을 확인하세요.</li>
-                    <li>1:1문의를 통해서도 상담이 가능합니다.</li>
-                    <li>상품 문의는 각 상품 Q&A를 이용하세요.</li>
+                    <li>전화 전 <a href="#"><strong>자주 묻는 질문</strong></a>을 확인하세요.</li>
+                    <li><a href="#"><strong>1:1문의</strong></a>를 통해서도 상담이 가능합니다.</li>
+                    <li>상품 문의는 각 <strong>상품 Q&A</strong>를 이용하세요.</li>
                 </ul>
             </div>
         </div>
