--- a/join.html
+++ b/join.html
@@ -33,21 +33,21 @@
         <section id="memberArea">
             <p class="location">HOME &gt; <strong>SIGN UP</strong></p>
             <h2>SIGN UP</h2>
-            <p class="formSign"><strong class="require">필수</strong>는 반드시 입력하여야 하는 항목입니다.</p>
+            <p class="formSign"><strong class="required">필수</strong>는 반드시 입력하여야 하는 항목입니다.</p>
             <form action="join.jsp" method="post" id="joinForm" name="joinForm">
                 <fieldset>
                     <legend>회원가입 정보 입력 폼</legend>
                     <p>
                         <label for="name">이름
-                            <strong class="require">필수</strong>
+                            <strong class="required">필수</strong>
                             <span>······</span>
                         </label>
                         <input type="text", id="name" name="name" required placeholder="이름을 적어주세요 'OOO'">
                     </p>
                     <p>
                         <label for="id">아이디
-                            <strong class="require">필수</strong>
-                            <span>······</span>
+                            <strong class="required">필수</strong>
+                            <span>····</span>
                         </label>
                         <input type="text", id="id" name="id" required placeholder="Guest">
                         <a href="#" class="idCheck">중복확인</a>
@@ -55,33 +55,33 @@
                     <p>
                         <label for="password">비밀번호
                             <strong class="required">필수</strong>
-                            <span>······</span>
+                            <span>····</span>
                         </label>
                         <input type="password", id="password" name="password" required placeholder="영문/숫자/특수문자 포함 8~15자 이내">
                     </p>
                     <p>
                         <label for="confirmPassword">비밀번호 확인
                             <strong class="required">필수</strong>
-                            <span>······</span>
+                            <span>····</span>
                         </label>
                         <input type="password", id="confirmPassword" name="confirmPassword" required>
                     </p>
                     <p>
                         <label for="tel">휴대폰
-                            <span>······</span>
+                            <span>····</span>
                         </label>
                         <input type="tel", id="tel" name="tel" maxlength="11" size="20" title="하이픈(-)은 입력할 수 없습니다.">
                     </p>
                     <p>
                         <label for="email">이메일
-                            <strong class="require">필수</strong>
-                            <span>······</span>
+                            <strong class="required">필수</strong>
+                            <span>····</span>
                         </label>
                         <input type="email", id="email" name="email" size="35" required placeholder="입력 예) artisante@artisante.com">
                     </p>
                     <p class="agreeMarketing">
                         <em>마케팅 정보 수신동의 (선택)
-                            <span>······</span>
+                            <span>····</span>
                         </em>
                         <div class="agreeOrNot">
                             <input type="radio" id="agree" name="agree" value="Yes" Checked>
@@ -90,8 +90,7 @@
                             <label for="disagree">동의안함</label>
                         </div>
                         <span id="span1">* 마케팅 정보 수신에 동의하시면 다양한 혜택을 받으실 수 있습니다.</span>
-                    </p>
-                    <div class="btnJoinArea">
+                    </p><div class="btnJoinArea">
                         <button type="submit" class="btnOk">가입</button>
                         <button type="reset" class="btnCancel">취소</button>
                     </div>
