--- a/join.html
+++ b/join.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gugi&family=Noto+Sans+KR:wght@100..900&family=Orbit&family=Oswald:wght@200..700&family=Yarndings+20&family=Yarndings+20+Charted&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/join.css">
 </head>
@@ -12,7 +15,7 @@
         <!-- LOGO 시작 -->
         <h1 class="logo">
             <a href="index.html">
-                <img src="images/logo_trial-removebg-preview.png" alt="logo">
+                <img src="../MakingPageMyself/css/images/logo_trial-removebg-preview.png" alt="logo">
             </a>
         </h1>
         <!-- LOGO 종료 -->
@@ -40,7 +43,7 @@
                     <p>
                         <label for="name">이름
                             <strong class="required">필수</strong>
-                            <span>······</span>
+                            <span>····</span>
                         </label>
                         <input type="text", id="name" name="name" required placeholder="이름을 적어주세요 'OOO'">
                     </p>
